# clinical-agentic-control-plane

./: .dockerignore  .env.dev.example  .gitignore  CHANGELOG.md  CONTRACTS.md  Dockerfile  Makefile  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: build.yml  ci.yml  repro-fire-test.yml  security.yml  supply-chain-policy.yml
docs/: architecture.md  audit-model.md  error-adoption-plan.md  error-model.md  key-rotation-policy.md  observability.md  policy-change-checklist.md  policy-model.md  threat-model-lite.md
docs/adr/: ADR-0001-event-sourcing-opa-gitops.md  ADR-0001-pr-first.md  ADR-0002-event-store-projections.md  ADR-0003-opa-arbiter.md
examples/errors/: INTERNAL_ERROR.json  INVALID_REQUEST.json  POLICY_VIOLATION.json
infra/local/: Dockerfile.dev  docker-compose.yml  init.sql
specs/contracts/: agent_report.schema.json  error.schema.json  proposal.schema.json
src/cacp/: __init__.py  consent.py  healthchecks.py  logging.py  py.typed  settings.py
tests/: __init__.py  conftest.py
tests/contract/: conftest.py  test_error_conforms_schema.py  test_plan_conforms_schema.py
tests/integration/: conftest.py  test_ingest_to_proposal.py
tests/unit/: test_api_health.py  test_compliance_agent.py  test_consent.py  test_dedup_retry_dlq.py  test_demo_endpoints.py  test_error_handlers.py  test_event_store.py  test_event_store_memory.py  test_ingest.py  test_manifest.py  test_orchestrator.py  test_ready.py  test_revenue_agent.py  test_signing.py  (+8 more)
(+32 files in other folders)
