[project]
name = "clinical-agentic-control-plane"
version = "0.1.0"
description = "PR-first agentic control plane for clinical no-show reduction"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Julian Najas" }]
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "httpx>=0.28,<1",
    "psycopg[binary]>=3.2,<4",
    "redis>=5.2,<6",
    "structlog>=24.4,<25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6,<7",
    "httpx>=0.28,<1",
    "mypy>=1.14,<2",
    "ruff>=0.9,<1",
    "pip-audit>=2,<3",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel", "pydantic_settings.BaseSettings"]

[tool.ruff.lint.isort]
known-first-party = ["cacp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
